# Tavros

./: .gitignore  .gitmodules  CMakeLists.txt  CONVENTIONS.md  README.md  tavros.py
assets/: config.tef
assets/configs/: fonts.tef  materials.tef  render_targets.tef  textures.tef
docs/: teff_spec.txt
docs/architecture/: STANDARD_METHODS.md
docs/asset_descriptors/: material.md  render_target.md  texture.md
sources/: CMakeLists.txt
sources/libs/: CMakeLists.txt
sources/third/: CMakeLists.txt
sources/third/fmt/: CMakeLists.txt
sources/third/fmt/include/fmt/: color.h  fmt.hpp
sources/third/glad/: CMakeLists.txt
sources/third/glad/glad/: glad.c  glad.h
sources/third/stb/: CMakeLists.txt
sources/third/stb/stb/: stb.c  stb_truetype.h
sources/third/tinyobjloader/: CMakeLists.txt
sources/third/tomlplusplus/: CMakeLists.txt
sources/third/tomlplusplus/toml/: toml.cpp
sources/third/zlib/: CMakeLists.txt
sources/wrappers/: CMakeLists.txt
sources/wrappers/q3pp/: CMakeLists.txt  CMakeSources.txt
sources/wrappers/q3pp/sources/: menudef.h
sources/wrappers/q3pp/sources/botlib/: aasfile.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_interface.c  be_interface.h  l_crc.c  l_crc.h  (+13 more)
sources/wrappers/q3pp/sources/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.c  cg_view.c  cg_weapons.c  tr_types.h
sources/wrappers/q3pp/sources/client/: cl_cgame.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keys.h  snd_adpcm.c  snd_dma.c  snd_local.h  snd_mem.c  snd_mix.c  snd_public.h  snd_wavelet.c
sources/wrappers/q3pp/sources/game/: ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  ai_vcmd.c  ai_vcmd.h  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  botlib.h  chars.h  g_active.c  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_local.h  g_main.c  g_mem.c  g_misc.c  (+19 more)
sources/wrappers/q3pp/sources/q3_renderer/: qgl.c  qgl.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_noise.c  tr_public.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_sky.c  tr_surface.c  tr_world.c
sources/wrappers/q3pp/sources/q3_ui/: keycodes.h  ui_addbots.c  ui_atoms.c  ui_confirm.c  ui_connect.c  ui_controls2.c  ui_demo2.c  ui_display.c  ui_gameinfo.c  ui_ingame.c  ui_local.h  ui_main.c  ui_menu.c  ui_mfield.c  ui_network.c  ui_playermodel.c  ui_players.c  ui_playersettings.c  ui_preferences.c  ui_public.h  ui_qmenu.c  ui_removebots.c  ui_serverinfo.c  ui_servers2.c  ui_setup.c  ui_sound.c  ui_sparena.c  ui_specifyserver.c  ui_splevel.c  ui_sppostgame.c  ui_spskill.c  ui_startserver.c  ui_syscalls.c  ui_team.c  ui_teamorders.c  ui_video.c
sources/wrappers/q3pp/sources/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  md4.c  msg.c  net_chan.c  qcommon.h  qfiles.h  unzip.c  unzip.h
sources/wrappers/q3pp/sources/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
sources/wrappers/q3pp/sources/win32/: opengl_swapchain.cpp  opengl_swapchain.hpp  win_local.h  win_main.c  win_net.c  win_snd.c
sources/wrappers/sandbox/: CMakeLists.txt  CMakeSources.txt
sources/wrappers/sandbox/sources/: built_in_meshes.cpp  built_in_meshes.hpp  event_queue.cpp  event_queue.hpp  fps_meter.hpp  free_camera.hpp  image_codec.cpp  image_codec.hpp  image_decoder.cpp  image_decoder.hpp  image_loader.cpp  image_loader.hpp  include_resolver.hpp  input_manager.cpp  input_manager.hpp  main.cpp  particle_components.hpp  particle_effectors.hpp  particle_emitter.hpp  particle_physics.hpp  particle_render.hpp  particle_shapes.hpp  particle_system.hpp  pipeline_presets.hpp  render_app_base.cpp  render_app_base.hpp  resource_locator.cpp  resource_locator.hpp  scene_data.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp  source_file.cpp  source_file.hpp  text_rendering.hpp  thread_pool.hpp
tests/: CMakeLists.txt
tests/math/: main.cpp  mat3.cpp  vec.cpp
tests/sources/: CMakeLists.txt  CMakeSources.txt  common.test.hpp  main.test.cpp
tests/sources/core_tests/allocators/: chunk_allocator.test.cpp
tests/sources/core_tests/geometry/: plane.test.cpp  ray3.test.cpp
tests/sources/core_tests/ids/: index_allocator.test.cpp
tests/sources/core_tests/math/: bitops.test.cpp  euler3.test.cpp  mat3.test.cpp  quat.test.cpp  vec2.test.cpp  vec4.test.cpp
tests/sources/core_tests/utils/: preproc_lexer.test.cpp
tests/sources/geometry/: plane.test.cpp  ray3.test.cpp  sphere.test.cpp
tests/sources/ids/: index_allocator.test.cpp  l4_index_allocator.test.cpp
tests/sources/math/: ivec2.test.cpp  mat4.test.cpp  quat.test.cpp  vec3.test.cpp
tests/sources/renderer_tests/: pp_lexer.test.cpp
tools/: .clang-format  .clang-tidy  config.toml  initial_config.toml
tools/cmake/: Info.plist.in  utils.cmake
tools/scripts/: builtin_variables.py  cmake.py  config.py  help.py  log.py  main.py  tools.py  utils.py  variable_resolver.py
(+613 files in other folders)
