add_subdirectory(glad)
add_subdirectory(stb)
add_subdirectory(tinyobjloader)
add_subdirectory(fmt)
add_subdirectory(zlib)
add_subdirectory(tracy)

set_target_group(glad "third")
set_target_group(stb "third")
set_target_group(tinyobjloader "third")
set_target_group(fmt "third")
set_target_group(zlibstatic "third")
set_target_group(TracyClient "third")
